--- a/code/checkpoints/config.json
+++ b/code/checkpoints/config.json
@@ -1,1 +1,1 @@
-{"input_shape": [28, 28, 1], "latent_dim": 2, "train_params": {"batch_size": 128, "epochs": 10, "validation_split": 0.3, "shuffle": true}, "optimizer": "adam"}
+{"input_shape": [28, 28, 1], "latent_dim": 2, "num_shuffle": 10, "train_params": {"batch_size": 128, "epochs": 1, "validation_split": 0.3, "shuffle": true}, "optimizer": "adam"}
